--- a/src/css/notate.css
+++ b/src/css/notate.css
@@ -19,16 +19,18 @@
 	font-weight: 500;
 	font-size: 16px;
 	line-height: 18px;*/
-	font-family: "Lora", Georgia, "Times New Roman", Times, serif;
+	font-family: "Lora", Georgia, "Times New Roman", Times, serif !important;
   	font-size: 17px;
   	line-height: 1.5em;
 }
 
 .qtip .qtip-title {
 	text-align: left;
+	font-family: "Lora", Georgia, "Times New Roman", Times, serif !important;
 }
 
 .notate-notebox-content {
+	font-family: "Lora", Georgia, "Times New Roman", Times, serif !important;
 	min-width: 150px; 
 	min-height: 40px;
 	font-size: 15px;
@@ -46,7 +48,7 @@
 }
 
 .notate-notebox-footer button {
-	font-family: "Lora", Georgia, "Times New Roman", Times, serif;
+	font-family: "Lora", Georgia, "Times New Roman", Times, serif !important;
 	font-size: 14px;
 	font-weight: normal;
 	background-color: #333;
